test/spec_vectors/conversions/fail/module_20.wat
(module (func (result f64) (f64.convert_i32_s (i64.const 0))))